[ 🛠️ ] profile_images links fixed

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
               </div>
               <figure class="card__profile">
                 <img
-                  src="./screenshots/profile.png"
+                  src="https://raw.githubusercontent.com/miko-github/s.m.k_attendance/master/screenshots/profile.png"
                   alt=""
                   class="card__image"
                 />
@@ -238,7 +238,7 @@
               </div>
               <figure class="card__profile">
                 <img
-                  src="./screenshots/profile.png"
+                  src="https://raw.githubusercontent.com/miko-github/s.m.k_attendance/master/screenshots/profile.png"
                   alt=""
                   class="card__image"
                 />
@@ -275,7 +275,12 @@
               </table>
             </div>
             <figure class="card__profile">
-              <img src="./screenshots/profile.png" alt="" class="card__image" />
+              <img
+                src="https://raw.githubusercontent.com/miko-github/s.m.k_attendance/master/screenshots/profile.png
+         "
+                alt=""
+                class="card__image"
+              />
               <figcaption class="card__state card__state--state_2">
                 <!-- STATE_COLOR || USERNAME -->
               </figcaption>
@@ -307,7 +312,11 @@
               </table>
             </div>
             <figure class="card__profile">
-              <img src="./screenshots/profile.png" alt="" class="card__image" />
+              <img
+                src="https://raw.githubusercontent.com/miko-github/s.m.k_attendance/master/screenshots/profile.png"
+                alt=""
+                class="card__image"
+              />
               <figcaption class="card__state card__state--state_3">
                 <!-- STATE_COLOR || USERNAME -->
               </figcaption>
@@ -339,7 +348,11 @@
               </table>
             </div>
             <figure class="card__profile">
-              <img src="./screenshots/profile.png" alt="" class="card__image" />
+              <img
+                src="https://raw.githubusercontent.com/miko-github/s.m.k_attendance/master/screenshots/profile.png"
+                alt=""
+                class="card__image"
+              />
               <figcaption class="card__state card__state--state_4">
                 <!-- STATE_COLOR || USERNAME -->
               </figcaption>
